<resources>
    <string name="app_name">FooDare</string>
    <string name="home_bar">HOME</string>
    <string name="upload_bar">UPLOAD</string>
    <string name="my_posts_bar">MY POSTS</string>
    <string name="profile_bar">PROFILE</string>
    <string name="edit_profile_bar">EDIT PROFILE</string>
    <string name="post_details_bar">POST DETAILS</string>
    <string name="edit_post">EDIT POST</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_meal">DAILY MEAL</string>
</resources>